# cassave

./: .gitignore  CMakeLists.txt  README.md
docs/examples/: shell.cc
lib/: io.js
src/: NativeBinding.cpp  NativeBinding.h  SubsManager.cpp  SubsManager.h  array_buff_alloc.cpp  array_buff_alloc.h  cassave.cpp  cassave_io.cpp  cassave_io.h  cassave_natives.cpp  cassave_natives.h  global_funcs.cpp  global_funcs.h  native_binding.cpp  native_binding.h  subs_manager.cpp  subs_manager.h  util_methods.h  v8_methods.cpp  v8_methods.h
src/native_test/: global_funcs.cpp  global_funcs.h  native_require.cpp  native_require.h  native_test.cpp  option_parser.cpp  option_parser.h  util_methods.cpp  util_methods.h  v8_methods.h
src/v8_test/: hello_world.cpp
test/js_testfiles/: global_print_funcs.js  global_process.js  index.js
tools/: create_cassave_lib.py  js2c.py
